# lets-drive

./: .gitignore  README.md
car_hyp_despot/: CMakeLists.txt
catkin_ws/: README.md
crowd_pomdp_planner/: is_despot_param.yaml  planner_debug.launch  planner_zero.launch  update_carla.sh
docker/: Dockerfile.init  Dockerfile.init_empty  Dockerfile.ros  Dockerfile.ros_torch_opencv  README.md  exp_entrypoint.sh  ros_entrypoint.sh  ros_entrypoint.sh.ros  rosdep-repair.sh  summit_entrypoint.sh
sac_discrete/: CMakeLists.txt
sac_discrete/src/: __init__.py  env_proxy.py  labeller_proxy.py  utils.py
sac_discrete/src/agent/: __init__.py  base.py  utils.py
sac_discrete/src/agent/imitation/: base.py  learner.py
sac_discrete/src/agent/sac_discrete/: __init__.py  actor.py
sac_discrete/src/env/: __init__.py  crowd_driving_env.py  env_service.py  reward.py
sac_discrete/src/memory/: __init__.py  base.py  inspect_replay.py  labeller_service.py
sac_discrete/src/network/: __init__.py  base.py
sac_discrete/src/policy/: categorical.py
sac_discrete/src/q_function/: __init__.py
sac_discrete/src/value/: collision_refracted.py
scripts/: bag_2_video.launch  bag_2_video.sh  clear_process.py  cp_test_policy.sh  exp_log_89  experiment_summit.sh  inspect.sh  launch_docker.py  make_videos.sh  prepare_policy_cp.sh  repeated_tmux.sh  run_data_collection.py  server_pipline.py  tmux_imitation_test.sh  tmux_pomdp_new.sh  tmux_rnf_learner_test.sh  tmux_sac.sh  tmux_sac_test.sh  tmux_spv_learner_no_virtual.sh  tmux_spv_learner_test.sh  tmux_svp_learner.sh  video_recording.launch  (+1 more)
(+203 files in other folders)
